@@ -1,3 +1,12 @@
+2012-01-17  WOnder93  <omosnacek@gmail.com>
+
+	* AssemblyInfo.cs:
+	  
+
+	* TcpConnection.cs:
+	  Use shared send buffer for all output streams for a
+	  connection.
+
 2012-01-11  WOnder93  <omosnacek@gmail.com>
 
 	* AssemblyInfo.cs:
